k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-mono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-mono
  template:
    metadata:
      labels:
        app: ecom-mono
    spec:
      containers:
        - name: ecom-mono
          image: ecom-mono:latest
          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-mono
spec:
  type: ClusterIP
  ports:
    - port: 8070
  selector:
    app: ecom-mono
