k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend-mono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend-mono
  template:
    metadata:
      labels:
        app: angular-frontend-mono
    spec:
      containers:
        - name: angular
          image: angular-frontend-mono:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend-mono
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30080
  selector:
    app: angular-frontend-mono
