k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-mono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db-mono
  template:
    metadata:
      labels:
        app: mysql-db-mono
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-mono
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql-db-mono
