k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: frontendmono.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-mono
                port:
                  number: 80

    - host: backendmono.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecom-mono
                port:
                  number: 8070
